[tool.poetry]
name = "bc-utils"
version = "0.1.0"
description = "Python utility automation scripts for Barchart.com"
authors = ["Andy Geach <andy@bugorfeature.net>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26"
bs4 = "^0.0.1"
pandas = ">1,<=1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
